[add] kafdrop and 💄